apps/music/style/music.css
/* ... */
#player-cover-caption,
#player-cover-buttons {
  position: relative;
  width: 100%;
  height: 5rem;
  background-color: rgba(0, 0, 0, 0.5);
  transition: transform 700ms ease-in-out;
}

#player-cover-caption {
  top: -5rem;
}

#player-cover-artist,
#player-cover-album {
  position: relative;
  z-index: 1;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-indent: 3rem;
  text-shadow: black 0.1rem 0.1rem;
  line-height: 2.5rem;
}

#player-cover-artist {
  width: 75%;
  height: auto;
  text-align: left;
  font-size: 1.9rem;
}

#player-cover-album {
  width: 75%;
  height: auto;
  text-align: left;
  font-size: 1.7rem;
}

#player-cover-artist.hidden-cover-share,
#player-cover-album.hidden-cover-share {
  width: 100%;
}

#player-cover-share {
  width: calc(25% - 2rem);
  height: 80%;
  padding: 0;
  border-radius: 3.5rem;
  margin: 0 1rem;
  font-weight: 500;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 3rem;
  background-image: url("./images/iconaction_media_share_30x30.png");
  position: absolute;
  top: 10%;
  right: -2%;
  z-index: 1;
}

#player-cover-buttons {
  bottom: calc(-100% + 5rem);
}

#player-album-shuffle,
#player-album-rating,
#player-album-repeat {
  position: relative;
  float: left;
}

#player-album-shuffle,
#player-album-repeat {
  top: 10%;
  width: calc(25% - 2rem);
  height: 80%;
  padding: 0;
  border-radius: 3.5rem;
  margin: 0 1rem;
  font-weight: 500;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 3rem;
}

#player-album-shuffle {
  background-image: url("./images/IconAction_Media_ShuffleOff_30x30.png");
}

#player-album-shuffle:disabled,
#player-album-shuffle.shuffle-on {
  background-image: url("./images/IconAction_Media_ShuffleOn_30x30.png");
}

#player-album-repeat.repeat-off {
  background-image: url("./images/IconAction_Media_RepeatOff_30x30.png");
}

#player-album-repeat:disabled,
#player-album-repeat.repeat-list {
  background-image: url("./images/IconAction_Media_RepeatList_30x30.png");
}

#player-album-repeat.repeat-song {
  background-image: url("./images/IconAction_Media_RepeatSong_30x30.png");
}

#player-album-rating {
  width: 50%;
  height: 100%;
  text-align: center;
}

button::-moz-focus-inner {
  padding: 0;
  border: none;
}

.rating-star {
  position: relative;
  float: left;
  width: 20%;
  height: 100%;
  text-align: center;
  color: rgba(255, 255, 255, 0.3);
  border: 0;
  outline: none;
  background-image: url('./images/star_off.png');
  background-position: center center;
  background-repeat: no-repeat;
  background-color: transparent;
  background-size: 2.2rem;
}

.star-on {
  background-image: url('./images/star_on.png');
}

#player-seek {
  position: relative;
  height: 4.2rem;
  font-size: 0;
  background-color: rgba(0,0,0, 0.85);
}

#player-seek-elapsed,
#player-seek-bar,
#player-seek-remaining {
  display: inline-block;
  position: relative;
  vertical-align: top;
}

#player-seek-elapsed,
#player-seek-remaining {
  width: 5.3rem;
  line-height: 4.2rem;
  font-size: 1.4rem;
  font-weight: 400;
  color: #e7e7e7;
}

#player-seek-elapsed {
  padding-left: 1.5rem;
}

#player-seek-remaining {
  text-align: right;
  padding-right: 1.5rem;
}

#player-seek-bar {
  display: inline-block;
  width: 18.4rem;
  height: 100%;
  z-index: 1;
}

#player-seek-bar-progress {
  pointer-events: none;
  -moz-appearance: none;
  position: absolute;
  top: calc(50% - 0.1rem);
  left: 0;
  height: 0.1rem;
  border-width: 0;
  border-radius: 0;
  background-color: #a6b4b7;
}

#player-seek-bar-progress::-moz-progress-bar {
  height: 0.3rem;
  margin-top: -0.1rem;
  background-color: #00CAF2;
}

#player-seek-bar-indicator {
  position: absolute;
  top: calc(50% - 1.15rem);
  width: 2.3rem;
  height: 2.3rem;
  pointer-events: none;
}

#player-seek-bar-indicator:after {
  content: "";
  position: absolute;
  top: calc(50% - 1.25rem);
  left: calc(50% - 1.15rem);
  width: 2.1rem;
  height: 2.1rem;
  border-radius: 50%;
  border: 0.1rem solid #ffffff;
  background-color: #ffffff;
}


#player-seek-bar-indicator.highlight:before {
  content: "";
  position: absolute;
  top: calc(50% - 3.05rem);
  left: calc(50% - 3.05rem);
  width: 6.1rem;
  height: 6.1rem;
  border-radius: 50%;
  background-color: #00CAF2;
}

#player-controls {
  position: relative;
  height: 4.8rem;
  font-size: 0;
  vertical-align: top;
  border-top: 0.1rem solid rgba(255,255,255, 0.1);
  background-color: #000;
  overflow: hidden;
}

#player-controls-previous,
#player-controls-play,
#player-controls-next {
  position: relative;
  height: 100%;
  padding: 0;
  font-weight: 500;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 3rem;
}

#player-controls-previous,
#player-controls-next {
  width: 10.7rem;
}

#player-controls-play {
  width: 10.6rem;
}

#player-controls-previous {
  background-image: url("./images/IconAction_Media_SkipBackwards_30x30.png");
}

#player-controls-play {
  background-image: url("./images/IconAction_Media_Pause_30x30.png");
}

#player-controls-play.is-pause {
  background-image: url("./images/IconAction_Media_Play_30x30.png");
}

#player-controls-next {
  background-image: url("./images/IconAction_Media_SkipForward_30x30.png");
}

.player-controls-button {
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  background: transparent;
  transition: background 200ms ease;
}
.player-controls-button:hover {
  background: transparent;
}
.player-controls-button:active {
  background: #00caf2;
}
.player-controls-button:disabled {
  opacity: 0.3;
}
.player-controls-button:disabled:active {
  background: transparent;
}

#tabs {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 4rem;
  z-index: 20;
}

/* Overwrite BB tabs background transparency */
[role="tablist"] > [role="tab"] > a {
  background-color: rgba(0, 0, 0, 0.75);
}

#tabs a {
  outline: none;
}
/* ... */

