Bug 946268 - [Music] Right edge of music scrubber highlight is cut off

--- a/apps/music/style/music.css
+++ b/apps/music/style/music.css
@@ -772,7 +772,7 @@ button::-moz-focus-inner {
 
 #player-seek-bar-indicator {
   position: absolute;
-  top: calc(50% - 1.15rem);
+  top: calc(50% - 1.2rem);
   width: 2.3rem;
   height: 2.3rem;
   pointer-events: none;
@@ -781,13 +781,10 @@ button::-moz-focus-inner {
 #player-seek-bar-indicator:after {
   content: "";
   position: absolute;
-  top: calc(50% - 1.25rem);
-  left: calc(50% - 1.15rem);
-  width: 2.1rem;
-  height: 2.1rem;
+  width: 0;
+  height: 0;
+  border: 1.15rem solid #fff;
   border-radius: 50%;
-  border: 0.1rem solid #ffffff;
-  background-color: #ffffff;
 }
 
 
@@ -796,10 +793,11 @@ button::-moz-focus-inner {
   position: absolute;
   top: calc(50% - 3.05rem);
   left: calc(50% - 3.05rem);
-  width: 6.1rem;
-  height: 6.1rem;
+  width: 0;
+  height: 0;
+  border: 3.05rem solid #00CAF2;
   border-radius: 50%;
-  background-color: #00CAF2;
+  border-radius: 50%;
 }
 
 #player-controls {
